* type=rule actions=exporttoexcel:file.html,ResolveAddressSummary | extend with resolveValue field
* class RulewithUserID - read user information always as lower case - no case sensitive needed
* type=rule-merger | argument additionalmatch - change supported argument from 'logprof' to 'logsetting'
* type=address 'filter=(object is.region)' - extend display with custom region value information

BUGFIX:
* type=address | bugfix for filter=(value string.XYZ ) if Object of type Region is hit
* type=rule-merger | bugfix if panoramapostrules and no rule are set for exportcsv
* class UrlCategoryRuleContainer | bugfix for PHP 8.1 - variable not set
* type=address-merger | picketObject from upperlevel of type TMP is not possible - to not merge
* general - different classes - reordering reading of region objects - as these are taking precedence compare to address-group and address
* type=service-merger | bugfix to not delete object if merge is not possible - rare condition related to object overwritten at lower level

GENERAL:
* extend resources folder for ip_Protocol and Region IPv4/v6 files


2.1.4 (20230512)
UTIL:
* type=vendor-migration | improve output if arguments are missing

BUGFIX:
* type=vendor-migration vendor=ciscoasa | fix to avoid none object to read isGroup()
* type=vendor-migration vendor=ciscoasa | bugfix for creating service - to not add e.g. tacacs as service port

GENERAL:
- update dynamic content to Device App-ID version: 8708-8036
- improvements for PHP8.2 - deprecated variable declaration | function utf8_encode()


2.1.3 (20230511)
UTIL:
* type=rule ruletype=nat | introduce 'filter=(natruletype is XYZ)' - 'ipv4', 'nat64', 'nptv6'
* type=rule ruletype=nat | introduce 'filter=(snatinterface is.set)'
* type=rule ruletype=nat 'actions=exporttoexcel:test-export-service.html' | introduce nat_rule_type
* type=rule ruletype=nat | actions=display - introduce dnattype, dnatdistribution