@@ -4973,6 +4973,11 @@
             }
         }
     },
+    "rule-compare": {
+        "name": "rule-compare",
+        "action": [],
+        "filter": []
+    },
     "rule-merger": {
         "name": "rule-merger",
         "action": [],
