@@ -8,6 +8,7 @@ UTIL:
 * class RulewithUserID - read user information always as lower case - no case sensitive needed
 * type=rule-merger | argument additionalmatch - change supported argument from 'logprof' to 'logsetting'
 * type=address 'filter=(object is.region)' - extend display with custom region value information
+* type=rule-compare | introduce new utility - to compare rule SRC/DST/SRV of two files
 
 BUGFIX:
 * type=address | bugfix for filter=(value string.XYZ ) if Object of type Region is hit
